force-app/main/default/objects/eContacts__CustomSettingLayout__mdt/eContacts__CustomSettingLayout__mdt.object-meta.xml
<CustomObject>
    <label>CustomSettingLayout</label>
    <pluralLabel>CustomSettingLayouts</pluralLabel>
</CustomObject>