force-app/main/default/objects/eContacts__CustomSettingLayout__mdt/fields/eContacts__CustomSettingAPIName__c.field-meta.xml
<CustomField>
    <fullName>eContacts__CustomSettingAPIName__c</fullName>
    <label>CustomSettingAPIName</label>
    <length>200</length>
    <type>Text</type>
</CustomField>