force-app/main/default/objects/eContacts__CustomSettingLayout__mdt/fields/eContacts__FieldAPIName__c.field-meta.xml
<CustomField>
    <fullName>eContacts__FieldAPIName__c</fullName>
    <label>FieldAPIName</label>
    <length>250</length>
    <type>Text</type>
</CustomField>