force-app/main/default/objects/eContacts__CustomSettingLayout__mdt/fields/eContacts__FieldLabel__c.field-meta.xml
<CustomField>
    <fullName>eContacts__FieldLabel__c</fullName>
    <label>FieldLabel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>