force-app/main/default/objects/eContacts__CustomSettingLayout__mdt/fields/eContacts__FieldType__c.field-meta.xml
<CustomField>
    <fullName>eContacts__FieldType__c</fullName>
    <label>FieldType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Checkbox</fullName>
                <default>true</default>
                <label>Checkbox</label>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Text Area</fullName>
            </value>
            <value>
                <fullName>TextColorHelp</fullName>
            </value>
            <value>
                <fullName>FileUpload</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>