force-app/main/default/objects/eContacts__CustomSettingLayout__mdt/fields/eContacts__IsRequired__c.field-meta.xml
<CustomField>
    <fullName>eContacts__IsRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsRequired</label>
    <type>Checkbox</type>
</CustomField>