force-app/main/default/objects/eContacts__CustomSettingLayout__mdt/fields/eContacts__Section__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Section__c</fullName>
    <label>Section</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>