force-app/main/default/objects/eContacts__CustomSettingLayout__mdt/fields/eContacts__Sequence__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Sequence__c</fullName>
    <label>Sequence</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>