force-app/main/default/objects/eContacts__CustomSettingLayout__mdt/fields/eContacts__TabName__c.field-meta.xml
<CustomField>
    <fullName>eContacts__TabName__c</fullName>
    <label>TabName</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Design</fullName>
                <default>true</default>
                <label>Design</label>
            </value>
            <value>
                <fullName>Menu</fullName>
            </value>
            <value>
                <fullName>Options</fullName>
            </value>
            <value>
                <fullName>Home</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>