force-app/main/default/objects/eContacts__CustomSettingLayout__mdt/listViews/eContacts__AllFields.listView-meta.xml
<ListView>
    <fullName>eContacts__AllFields</fullName>
    <columns>eContacts__FieldAPIName__c</columns>
    <columns>eContacts__FieldLabel__c</columns>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>eContacts__CustomSettingAPIName__c</columns>
    <columns>eContacts__FieldType__c</columns>
    <columns>eContacts__Sequence__c</columns>
    <columns>eContacts__IsRequired__c</columns>
    <columns>eContacts__Section__c</columns>
    <columns>eContacts__TabName__c</columns>
    <filterScope>Everything</filterScope>
    <label>AllFields</label>
</ListView>